# tasque

./: .gitattributes  .gitignore  AGENTS-reference.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LEARNINGS.md  README.md  biome.json  bumpyclock-tasque-0.1.0.tgz  bumpyclock-tasque-win32-x64-msvc-0.1.0.tgz  package.json  tsconfig.json
.claude/: settings.json  settings.local.json
.tasque/: .gitignore  config.json  events.jsonl  tasks.jsonl
docs/: planning-workflow.md  releasing.md  rust-port-spec.md  tui-v1-design.md
npm/: README.md  package.json
scripts/: build-npm.sh  release-hooks.ts  release-version.ts  release.ts  test-parallel.ts  version-bump.ts
src/: errors.ts  lib.rs  main.rs  main.ts  output.ts  types.rs  types.ts
tests/: app.stale.test.ts  app.state.clock.test.ts  app.state.test.ts  app.storage.test.ts  cli.claim.test.ts  cli.close.test.ts  cli.concurrency.test.ts  cli.create-enhanced.test.ts  cli.deferred.test.ts  cli.dep-tree.test.ts  cli.dep-types.test.ts  cli.discovered-from.test.ts  cli.duplicate.test.ts  cli.e2e.test.ts  cli.exit-code-reset.test.ts  cli.external-ref.test.ts  cli.history-limit.test.ts  cli.history.test.ts  cli.init-flags.test.ts  cli.init-flow.test.ts  cli.labels.test.ts  cli.list-filters.test.ts  cli.merge.test.ts  cli.orphans.test.ts  cli.ready-lane.test.ts  cli.rich-content.test.ts  cli.search.test.ts  cli.spec.test.ts  cli.stale-limit.test.ts  cli.stale.test.ts  cli.tree-render-width.test.ts  cli.version.test.ts  cli.watch.test.ts  create_children_batch.rs  domain.ids.test.ts  domain.projector.planning-state.test.ts  (+37 more)
(+212 files in other folders)
